added nav bar with responsive

--- a/index.html
+++ b/index.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <title>Travel Flow</title>
+
+
 </head>
 <body>
-    <header>
 
+    <header>
+        <!-- nav bar start -->
+        <nav class="nav-bar">
+            <div class="img-title">
+                <img src="./Images/Group 40071 (2).png" alt="">
+            <h2>Travel <span class="flow-style">Flow</span></h2>
+            </div>
+            <ul class="nav-ul-style">
+                <li><span class="flow-style">Home</span></li>
+                <li>Packages</li>
+                <li>Testimonial</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <!-- nav bar end -->
     </header>
+
     <main>
 
     </main>
+
     <footer>
-        
+
     </footer>
+
 </body>
 </html>
