added maldives indonesia img

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </header>
     <!-- header section ended -->
     <main>
+        <!-- popular tour part start -->
         <section class="popular-tour">
             <div>
                 <h2 class="popular-title">Our Popular Tours</h2>
@@ -81,6 +82,30 @@
             </div>
 
         </section>
+          <!-- popular tour part end -->
+
+          <!-- destination section start -->
+        <section>
+        <div class="destination-title">
+                <h2>Choose Your Destination</h2>
+            <p>
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+            </p>
+        </div>
+        <div class="maldives-indonesia">
+            <div>
+                <div class="maldives-title"><h3>Maldives</h3></div>
+                <img class="maldives-img" src="./Images/Rectangle 5.png" alt="">
+            </div>
+            <div class="indo-img-container">
+                <h3 class="indonesia-title">Indonesia</h3>
+                <img class="indonesia-img" src="./Images/Rectangle 8.png" alt="">
+            </div>
+        </div>
+
+
+        </section>
+           
     </main>
 
     <footer class="footer">
@@ -93,11 +118,12 @@
         </div>
         <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
         <img src="./icon/Social.svg" alt="">
-       </div>
-      <div class="footer-last">
         <hr>
         <p>2017, All Rights Reserved.</p>
       </div>
+       </div>
+      <div class="footer-last">
+        
     </footer>
 
 </body>
