--- a/index.html
+++ b/index.html
@@ -113,10 +113,37 @@
             </div>
 
         </section>
+        <!-- destination section ended -->
+        <!-- choose cart start -->
+        <section>
+            <div class="choose-heading">
+                <h2>Why Choose Us </h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="hotel-map">
+                <div class="hotel">
+                    <img src="./icon/hotel.svg" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="map">
+                    <img src="./icon/map.svg" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+            <div class="price-cart">
+                <img src="./icon/price-tag .svg" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </section>
+
            
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
 
        <div class="footer-div">
         <div class="footer-img">
@@ -132,7 +159,7 @@
        </div>
       <div class="footer-last">
         
-    </footer>
+    </footer> -->
 
 </body>
 </html>
