--- a/index.html
+++ b/index.html
@@ -138,6 +138,25 @@
                     <h3>Best Price Guarantee</h3>
                     <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
             </div>
+            <section>
+                <div class="perfect-img">
+                    <div>
+                        <h2>A Simple Perfect Place To Get Lost</h2>
+                        <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+                        </p>
+                        <ul>
+                            <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                            <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        </ul>
+                        <button class="btn-primary">
+                            See More
+                        </button>
+                    </div>
+                    <div>
+                        <img src="./Images/Group 40089.png" alt="">
+                    </div>
+                </div>
+            </section>
         </section>
 
            
