trying to responsive

--- a/index.html
+++ b/index.html
@@ -103,13 +103,28 @@
             </div>
         </div>
             <div class="snk">
-                <div><img class="srilanka-img" src="./Images/Rectangle 6.png" alt=""></div>
-                <div><img class="n-america-img" src="./Images/Rectangle 7.png" alt=""></div>
-                <div><img class="kashmir-img" src="./Images/Rectangle 9.png" alt=""></div>
+                <div class="srilanka-img-container">
+                    <img class="srilanka-img" src="./Images/Rectangle 6.png" alt="">
+                    <h3 class="srilanka-title">Srilanka</h3>
+                </div>
+                <div class="n-america-img-container">
+                    <img class="n-america-img" src="./Images/Rectangle 7.png" alt="">
+                    <h3 class="n-america-title">North America</h3>
+                </div>
+                <div class="kasmir-img-container">
+                    <img class="kashmir-img" src="./Images/Rectangle 9.png" alt="">
+                    <h3 class="kashmir-title">Kashmir</h3>
+                </div>
             </div>
             <div class="bd-bandarban">
-                <div><img class="bd-img" src="./Images/Rectangle 11.png" alt=""></div>
-                <div><img class="bandarban-img" src="./Images/Rectangle 10.png" alt=""></div>
+                <div class="bd-img-container">
+                    <img class="bd-img" src="./Images/Rectangle 11.png" alt="">
+                    <h3 class="bd-title">Bangladesh</h3>
+                </div>
+                <div class="bandarban-img-container">
+                    <img class="bandarban-img" src="./Images/Rectangle 10.png" alt="">
+                    <h3 class="bandarban-title">Bandarban</h3>
+                </div>
             </div>
 
         </section>
@@ -157,7 +172,7 @@
                     </button>
                 </div>
                 <div>
-                    <img src="./Images/Group 40089.png" alt="">
+                    <img id="per-img" src="./Images/Group 40089.png" alt="">
                 </div>
             </div>
         </section>
@@ -187,7 +202,6 @@
     <footer class="footer">
 
        <div class="footer-div">
-        
         <div class="footer-img">
             <img src="./Images/Group 40071 (2).png" alt="">
         <h2>Travel <span class="flow-style">Flow</span></h2>
