added per-img over text

--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
                         See More
                     </button>
                 </div>
-                <div>
+                <div class="per-img-container">
                     <img id="per-img" src="./Images/Group 40089.png" alt="">
+                    <h3 class="per-img-title">Watch our mountain in <br> Bangladesh</h3>
                 </div>
             </div>
         </section>
