--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="banner-description">
                 <div class="banner-title">
                     <h1>Explore Your Travel</h1>
-                    <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+                    <p>Welcome to Travel Flow.your ultimate travel companion on a journey of discovery, exploration, and unforgettable experiences.Here below you can select your choice</p>
 
                 </div>
                 <div class="btn-section">
@@ -65,14 +65,13 @@
         <section class="popular-tour">
             <div>
                 <h2 class="popular-title">Our Popular Tours</h2>
-                <p class="popular-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="popular-description">Embark on a virtual journey with us as we explore some of the world's most popular tours, each promising a unique blend of adventure, culture, and unforgettable moments. </p>
                 <ul id="tour-list" class="popular-description">
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li> <br>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li> <br>
-                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    <li>The Grandeur of the Grand Tour: Step into the footsteps of history with the Grand Tour of Mount Everest.</li> <br>
+                    <li>Discover the freedom and self-discovery that come with solo travel while navigating the challenges with confidence.</li> <br>
+                    <li> Discovering the World's Most Popular Tours: Unveiling Unforgettable Experiences.</li>
                 </ul>
-                <p class="popular-description">Amet consectetur. Vulputate commodo felis molestie risus 
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <p class="popular-description">These popular tours stand as testaments to the diversity and wonder that our planet holds. Whether you're drawn to historical landmarks, natural wonders, or cultural experiences, these tours offer a glimpse into the extraordinary tapestry of our world.</p>
                     <button class="btn-primary">
                         Read More
                     </button>
@@ -89,7 +88,7 @@
         <div class="destination-title">
                 <h2>Choose Your Destination</h2>
             <p>
-                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+                Here is the some view of attraction of nature and feelings.You can choose any where of world not only Bangladesh.
             </p>
         </div>
         <div class="maldives-indonesia">
@@ -133,25 +132,25 @@
         <section>
             <div class="choose-heading">
                 <h2>Why Choose Us </h2>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>There is a question on your mind that why you will choose us.Your answer is below</p>
             </div>
 
             <div class="hotel-map">
                 <div class="hotel">
                     <img src="./icon/hotel.svg" alt="">
                     <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>We are give to cusmomers best Handpicked hotel with their budgets that nobody can not as like us. </p>
                 </div>
                 <div class="map">
                     <img src="./icon/map.svg" alt="">
                     <h3>World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>We always offer you world class services.We dont compromise for services.Streamline your packing process with our guide to essentials. From clothing and toiletries to electronics and travel documents, we provide a comprehensive checklist to help you pack efficiently </p>
                 </div>
             </div>
             <div class="price-cart">
                 <img src="./icon/price-tag .svg" alt="">
                     <h3>Best Price Guarantee</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>There is no travel agency can not give customers price gurrantee but we ca do for our honest.Anyone can trust us. </p>
             </div>
            
         </section>
@@ -161,11 +160,11 @@
             <div class="perfect-img">
                 <div>
                     <h2>A Simple Perfect Place To Get Lost</h2>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+                    <p>The Enchanting Mountains of Bangladesh: Nature's Majesty Unveiled. 
                     </p>
                     <ul>
-                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li>The Chittagong Mountains feature hogback ridges with steep inclines. To the west there are several scarps featuring waterfalls and cliffs. Large rivers such as the Feni, Sangu, Karnafuli and Matamuhuri empty into the Bay of Bengal</li>
+                        <li>Important to realize, that we have considered the scenery, mountain quality and tourist facilities to drive the list.</li>
                     </ul>
                     <button class="btn-primary">
                         See More
@@ -208,7 +207,7 @@
         <h2>Travel <span class="flow-style">Flow</span></h2>
         
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <p>Thank for visiting our website.I hope you will stay with us.Because we are the best travel flow. You can join us in various media. <br> Try below icon</p>
         <img src="./icon/Social.svg" alt="">
         <hr>
         <p>2017, All Rights Reserved.</p>
