finnally finished but not nice responsive trying a lot

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
            
         </section>
         <!-- choose cart ended -->
-        <section>
+        <section class="deals">
             <div class="deals-img">
-                <img class="deals-img" src="./Images/Group 39.png" alt="">
+                <img src="./Images/Group 39.png" alt="">
 
                 <div class="tour-style">
 
@@ -173,16 +173,54 @@
                     </div>
 
                     <h3 class="tour-title">Tour To Satorini</h3>
-                    <p class="tour-description">Amet consectetur. Vulputate commodo felis 
-                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <p class="tour-description">There are many amazing all deals fun and musti.So he who loves to enjoy the tour book with in time</p>
                     <p class="tour-price">Price: $1300-$1500</p>
                     <button class="btn-primary">Book Now</button>
                 </div>
             </div>
-            <div>
-                <img src="./Images/" alt="">
-            </div>
+            <div class="deals-img-2">
+                <img src="./Images/Group 40.png" alt="">
+                <div class="tour-style">
 
+                    <div class="tour-img-style">
+
+                        <img src="./icon/clock.svg" alt="">
+                    <p>7 Day / 6 Night</p>
+                    <img src="./icon/people.svg" alt="">
+                    <p>Max : 10</p>
+                    <img src="./icon/map-i.svg" alt="">
+                    <p>Malaysia</p>
+
+                    </div>
+
+                    <h3 class="tour-title">Tour To Satorini</h3>
+                    <p class="tour-description">There are many amazing all deals fun and musti.So he who loves to enjoy the tour book with in time</p>
+                    <p class="tour-price">Price: $1300-$1500</p>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+            <div class="deals-img">
+                <img src="./Images/Group 39.png" alt="">
+
+                <div class="tour-style">
+
+                    <div class="tour-img-style">
+
+                        <img src="./icon/clock.svg" alt="">
+                    <p>7 Day / 6 Night</p>
+                    <img src="./icon/people.svg" alt="">
+                    <p>Max : 10</p>
+                    <img src="./icon/map-i.svg" alt="">
+                    <p>Malaysia</p>
+
+                    </div>
+
+                    <h3 class="tour-title">Tour To Satorini</h3>
+                    <p class="tour-description">There are many amazing all deals fun and musti.So he who loves to enjoy the tour book with in time</p>
+                    <p class="tour-price">Price: $1300-$1500</p>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
         </section>
         <!-- perfect img card start -->
         <section>
